# constellaration

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  pyproject.toml
.github/workflows/: ci.yaml  pyright.yaml  python-publish.yml
hugging_face_competition/: Dockerfile  README.md  app.py  evaluation.py  requirements.txt
hugging_face_competition/inputs/: boundaries.json  boundary.json
notebooks/: beta_variation_comparison.ipynb  boundary_explorer.ipynb  desc_optimization_sampling.ipynb  generative_model_simple_QI.ipynb  omnigenous_poloidal_fields_sampler.ipynb  vmec_optimization_sampling.ipynb
notebooks/point_cloud_fitting/: README.md  point_cloud_fitting.ipynb
optimization_examples/: augmented_lagrangian_toy_example.py  launch_alm_geometric_problem.py  launch_alm_mhd_stable_stellarator.py  launch_alm_simple_to_build_stellarator.py  launch_scipy_minimize_geometric_problem.py  launch_scipy_minimize_simple_to_build_stellarator.py
src/constellaration/: __about__.py  forward_model.py  initial_guess.py  mhd_stable_qi_scoring.py  problems.py
src/constellaration/boozer/: boozer.py
src/constellaration/data_generation/: vmec_optimization.py
src/constellaration/generative_model/: bootstrap_dataset.py
src/constellaration/geometry/: spectral_condensation.py  surface_rz_fourier.py  surface_utils.py  surface_utils_desc.py
src/constellaration/mhd/: geometry_utils.py  ideal_mhd_parameters.py  magnetics_utils.py  near_axis_configuration.py  turbulent_transport.py  vmec.py  vmec_settings.py  vmec_utils.py
src/constellaration/omnigeneity/: omnigenity_field_desc.py
src/constellaration/optimization/: augmented_lagrangian.py  augmented_lagrangian_runner.py  settings.py
src/constellaration/utils/: file_exporter.py  pytree.py  visualization.py  visualization_utils.py
src/contelleration/: __about__.py
tests/: mhd_stable_qi_scoring_test.py  problems_test.py
tests/data_generation/: desc_optimization_test.py  vmec_optimization_test.py
tests/geometry/: spectral_condensation_test.py  surface_rz_fourier_test.py  surface_utils_desc_test.py
tests/mhd/: geometry_utils_test.py  ideal_mhd_parameters_test.py
tests/omnigeneity/: omnigenity_field_desc_test.py  omnigenity_field_test.py
tests/utils/: dataset_utils_test.py  pytree_test.py  vmec_utils_test.py
(+2 files in other folders)
