[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "constellaration"
dynamic = ["version"]
description = 'Code for analyzing and evaluating stellarator plasma shapes'
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
keywords = []
authors = [
  { name = "Maria Pascu", email = "mariap@proximafusion.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
  "booz-xform==0.0.8",
  "jaxtyping",
  "numpy",
  "plotly",
  "pydantic",
  "qicna @ git+https://github.com/rogeriojorge/pyQIC.git@d130f6fa7de4ba8fd039f5c5ac42f553a2a292fe",
  "scipy",
  "simsopt==1.8.1",
  "vmecpp==0.4.1"
]

[tool.hatch.metadata]
allow-direct-references = true

[project.urls]
Documentation = "https://github.com/proximafusion/constellaration#readme"
Issues = "https://github.com/proximafusion/constellaration/issues"
Source = "https://github.com/proximafusion/constellaration"

[tool.hatch.version]
path = "src/constellaration/__about__.py"

[tool.hatch.envs.types]
extra-dependencies = [
  "mypy>=1.0.0",
]
[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:src/constellaration tests}"

[tool.coverage.run]
source_pkgs = ["constellaration", "tests"]
branch = true
parallel = true
omit = [
  "src/constellaration/__about__.py",
]

[tool.coverage.paths]
constellaration = ["src/constellaration", "*/constellaration/src/constellaration"]
tests = ["tests", "*/constellaration/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]

[tool.ruff]
line-length = 88

[tool.ruff.lint]
ignore = [
  "F722",     # Disable 'forward-annotation-syntax-error' for jaxtyping compatibility, see https://docs.kidger.site/jaxtyping/faq/#flake8-or-ruff-are-throwing-an-error
]